# things2reminder

./: .gitignore  README.md  cli.py  pyproject.toml
scripts/: check_reminders_setup.py  permission_check.py
tests/: __init__.py  test_mapper.py  test_reminders_client.py  test_things_client.py
things2reminder/: __init__.py  cli.py  exporter.py  mapper.py  reminders_client.py  things_client.py
things2reminder/reminders/: core.py
