[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "things2reminder"
version = "0.1.0"
description = "Export Things app todos to Apple Reminders with intelligent calendar selection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alan Synn", email = "alansynn@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "pyobjc>=8.0",
    "things-py>=0.0.15",
    "pydantic>=1.0.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.1",
]

[project.scripts]
things2reminder = "things2reminder.cli:main"

[project.urls]
Homepage = "https://github.com/AlanSynn/things2reminder"
Issues = "https://github.com/AlanSynn/things2reminder/issues"

[tool.hatch.build.targets.wheel]
packages = ["things2reminder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=things2reminder"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
